<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微课程与微百科平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_word">Welcome!</string>
	<string name="start">成功的唯一秘诀————坚持到最后一分钟</string>
	<string name="author">———柏拉图【古希腊】</string>
	<string name="Main_lable">已发布课程</string>
	<string name="M_lable">微课程与微百科平台</string>
	<string name="top_title1">上海市闵行第二中学</string>
    <string name="top_title2">SHANGHAI MINHANG NO.2 MIDDLE SCHOOL</string>
    <string name="top_title3">&#160;微&#160;课&#160;程&#160;与&#160;微&#160;百&#160;科&#160;平&#160;台</string>
	
</resources>