<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/top1_bg"
        android:orientation="vertical"
        android:padding="2dp" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/top_iv"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:paddingLeft="3dp"
                android:src="@drawable/logo_2" />

            <TextView
                android:id="@+id/top_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/top_iv"
                android:paddingTop="2dp"
                android:text="@string/top_title1"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/top_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/top_iv"
                android:layout_below="@id/top_tv1"
                android:layout_toRightOf="@id/top_iv"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:text="@string/top_title2"
                android:textColor="@android:color/white"
                android:textSize="6sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/top_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/top_title3"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView 
        android:id="@+id/ref_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/refresh"
        android:layout_centerVertical="true"
        android:paddingRight="10dp"
        android:layout_alignParentRight="true"/>
</RelativeLayout>